[B][COLOR gold]v1.9.17[/COLOR][/B]
- Re:fix tvdb

[B][COLOR gold]v1.9.16[/COLOR][/B]
- Added "Clean Settings file" options on Tools menu for TheOath & Oathscrapers
    *removes obsolete settings entries from add-on's addon_data settings.xml, to
     increase speed and reduce log spamming.
     Main code function taken from Fen (thanks), adjusted for TheOath

[B][COLOR gold]v1.9.14[/COLOR][/B]
- Adjusted to TheTVDB API changes for tv shows to work
    *season posters, some meta and show posters for trakt-based lists (eg People Watching,
     TV Show Mosts etc) still don't get fetched
- Added Disney+ to Networks

[B][COLOR gold]v1.9.13[/COLOR][/B]
- Replaced buggy "Resume" context menu dialog with a yes/no dialog

[B][COLOR gold]v1.9.12[/COLOR][/B]
- orionoid adjustments
- Bypass old (deleted) tmdb key if still stored in addon_data settings.xml

[B][COLOR gold]v1.9.10[/COLOR][/B]
- Added some dead hosts to the 'block' dict

[B][COLOR gold]v1.9.9[/COLOR][/B]
- Replaced API keys
    (it seems that some folks forked/cloned TheOath but didn't bother replacing my API keys.
     Now the old ones have been deleted)

[B][COLOR gold]v1.9.7[/COLOR][/B]
- Added more providers language options in settings, to support Openscrapers's newly
    added language scrapers

[B][COLOR gold]v1.9.5[/COLOR][/B]
- Fix crash on sources list dialog exit
- Made add-on's context menu items labels italics, to differ from Kodi's ones

[B][COLOR gold]v1.9.3[/COLOR][/B]
- Scrobble/bookmarks/resume optimisations

[B][COLOR gold]v1.9.0[/COLOR][/B]
- Added Trakt Scrobble function. NOTE: Do Not enable this if you use scrobbling for
    http sources through the official Trakt add-on, to avoid double scrobbling.
    * Basic scrobbling functionality - currently only Scrobble on Stop is supported.
- Other minor code tweaks

[B][COLOR gold]v1.8.11[/COLOR][/B]
- Added Polish translation - thx kodiultimate
- Some code adjustments suggested by Venom's dev - thx

[B][COLOR gold]v1.8.9[/COLOR][/B]